[package]
name = "zs2_l4_"
version = "4.2.9"
authors = ["zzzzzzzzzzz <zzzzzzzzzzzgg@gmail.com>"]
edition = "2018"

[features]
no_dl = []
use_llvm_asm = []
use_rusty_asm = ["rusty-asm"]
i8_u8 = []

[dependencies]
zhscript2 = {version = "4.2.9", path = "../zhscript2-rust", features = ["thread"]}
libloading = "0.5.0"
rusty-asm = {version = "0.2.1", optional = true}
regex = "1.3.4"
